--- a/config/database.yml
+++ b/config/database.yml
@@ -18,15 +18,13 @@
   ].detect { |f| f && File.exist?(f) }
 
   port = ENV["BOXEN_MYSQL_PORT"] || "3306"
-
-  p socket
-  p port
 %>
 
 development: &development
   adapter: mysql2
   database: idol_books_development
   username: root
+  password: rus9uGap
 <% if socket %>
   host: localhost
   socket: <%= socket %>
